force-app/main/default/objects/Product__c/fields/Created_By_Custom__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Created_By_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>