force-app/main/default/objects/Product__c/fields/Product_BU__c.field-meta.xml
<CustomField>
    <fullName>Product_BU__c</fullName>
    <label>Product BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test &amp; Measurement</fullName>
            </value>
            <value>
                <fullName>Protection &amp; Automation</fullName>
            </value>
            <value>
                <fullName>ISSPL</fullName>
            </value>
            <value>
                <fullName>Protection Solution</fullName>
                <isActive>false</isActive>
                <label>Protection Solution</label>
            </value>
            <value>
                <fullName>Substation Services</fullName>
                <isActive>false</isActive>
                <label>Substation Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>