force-app/main/default/objects/Product__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_BU__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCOT</fullName>
            </value>
            <value>
                <fullName>HISAC</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>TRM</fullName>
            </value>
            <value>
                <fullName>TTRM</fullName>
            </value>
            <value>
                <fullName>DirCT</fullName>
            </value>
            <value>
                <fullName>LCM</fullName>
            </value>
            <value>
                <fullName>HPT</fullName>
            </value>
            <value>
                <fullName>PRIMA</fullName>
            </value>
            <value>
                <fullName>DC Trace</fullName>
            </value>
            <value>
                <fullName>BLUe</fullName>
            </value>
            <value>
                <fullName>CFL</fullName>
            </value>
            <value>
                <fullName>TWFL</fullName>
            </value>
            <value>
                <fullName>OSB</fullName>
            </value>
            <value>
                <fullName>IRM</fullName>
            </value>
            <value>
                <fullName>ERM</fullName>
            </value>
            <value>
                <fullName>RETOM</fullName>
            </value>
            <value>
                <fullName>CRP</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>CSD</fullName>
            </value>
            <value>
                <fullName>SEED</fullName>
            </value>
            <value>
                <fullName>STEM</fullName>
            </value>
            <value>
                <fullName>GAP</fullName>
            </value>
            <value>
                <fullName>SCADA</fullName>
            </value>
            <value>
                <fullName>RTU</fullName>
            </value>
            <value>
                <fullName>BCU</fullName>
            </value>
            <value>
                <fullName>IFD</fullName>
            </value>
            <value>
                <fullName>Substation Services</fullName>
            </value>
            <value>
                <fullName>Testing Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>