force-app/main/default/objects/Product__c/fields/SAP_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_ID__c</fullName>
    <label>SAP Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>