force-app/main/default/objects/Product__c/fields/Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vertical__c</fullName>
    <label>Sub - Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>