force-app/main/default/objects/Product__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Status</label>
    <type>Checkbox</type>
</CustomField>