force-app/main/default/objects/Product__c/fields/Unit_of_Measure_UOM__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_UOM__c</fullName>
    <label>Unit of Measure (UOM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>