force-app/main/default/objects/Product__c/listViews/All_Active_Products.listView-meta.xml
<ListView>
    <fullName>All_Active_Products</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Products</label>
</ListView>