force-app/main/default/objects/Product__c/listViews/Inactive_Products.listView-meta.xml
<ListView>
    <fullName>Inactive_Products</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Products</label>
</ListView>