force-app/main/default/objects/Product__c/listViews/Products_By_Category.listView-meta.xml
<ListView>
    <fullName>Products_By_Category</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <filterScope>Mine</filterScope>
    <label>Products By Category</label>
</ListView>